<resources>
    <string name="app_name">World Cup 2018</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="nav_schedule_title">Schedule</string>
    <string name="nav_matches_title">Matches</string>
    <string name="nav_tables_title">Tables</string>
    <string name="nav_competition_title">Competition</string>
    <string name="nav_scorer_title">Scorer</string>
    <string name="nav_teams_title">Teams</string>
    <string name="nav_stadiums_title">Stadiums</string>
    <string name="nav_settings_title">Settings</string>
    <string name="nav_privacy_title">Privacy</string>
    <string name="nav_more_title">More</string>
    <string name="nav_recommendation_title">Recommendation</string>
    <string name="nav_rate_app_title">Rate App</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
