<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_schedule"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/nav_schedule_title" />
        <item
            android:id="@+id/nav_matches"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/nav_matches_title" />
        <item
            android:id="@+id/nav_tables"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/nav_tables_title" />
    </group>

    <item android:title="@string/nav_competition_title">
        <menu>
            <item
                android:id="@+id/nav_scorer"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/nav_scorer_title" />
            <item
                android:id="@+id/nav_teams"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/nav_teams_title" />
            <item
                android:id="@+id/nav_stadiums"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/nav_stadiums_title" />
        </menu>
    </item>
    <item android:title="@string/nav_settings_title">
        <menu>
            <item
                android:id="@+id/nav_settings"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/nav_settings_title" />
            <item
                android:id="@+id/nav_privacy"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/nav_privacy_title" />
        </menu>
    </item>

    <item android:title="@string/nav_more_title">
        <menu>
            <item
                android:id="@+id/nav_recommendation"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/nav_recommendation_title" />
            <item
                android:id="@+id/nav_rate_app"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/nav_rate_app_title" />
        </menu>
    </item>


</menu>
